--- a/yvol65.html
+++ b/yvol65.html
@@ -4,7 +4,7 @@
 <body bgcolor="" style="margin:0px;padding-bottom:0px;">
 
 
-<div align="center"><img src="../img/yvol65.jpg" style="width:100%;"></div>
+<div align="center"><img src="img/yvol65.jpg" style="width:100%;"></div>
 
 
 </body>
